--- a/paper/references.bib
+++ b/paper/references.bib
@@ -52,3 +52,9 @@
   year={2015},
   publisher={Packt Publishing Ltd}
 }
+
+@article{lee2017learning,
+  title={Learning to Predict Driver Behavior from Observation},
+  author={Lee, Yi-Ching and Snodgrass, Sam and Winston, Flaura K and Gonzalez, Avelino J},
+  year={2017}
+}
