--- a/paper/references.bib
+++ b/paper/references.bib
@@ -38,6 +38,12 @@
   publisher={American Association for the Advancement of Science}
 }
 
+@article{lee2017learning,
+  title={Learning to Predict Driver Behavior from Observation},
+  author={Lee, Yi-Ching and Snodgrass, Sam and Winston, Flaura K and Gonzalez, Avelino J},
+  year={2017}
+}
+
 @book{Goodfellow-et-al-2016,
     title={Deep Learning},
     author={Ian Goodfellow and Yoshua Bengio and Aaron Courville},
@@ -46,15 +52,16 @@
     year={2016}
 }
 
+@book{murphy2012machine,
+  title={Machine learning: a probabilistic perspective},
+  author={Murphy, Kevin P},
+  year={2012},
+  publisher={MIT press}
+}
+
 @book{raschka2015python,
   title={Python machine learning},
   author={Raschka, Sebastian},
   year={2015},
   publisher={Packt Publishing Ltd}
-}
-
-@article{lee2017learning,
-  title={Learning to Predict Driver Behavior from Observation},
-  author={Lee, Yi-Ching and Snodgrass, Sam and Winston, Flaura K and Gonzalez, Avelino J},
-  year={2017}
 }
