--- a/paper/references.bib
+++ b/paper/references.bib
@@ -38,9 +38,10 @@
   publisher={American Association for the Advancement of Science}
 }
 
-@article{lee2017learning,
+@inproceedings{lee2017learning,
   title={Learning to Predict Driver Behavior from Observation},
-  author={Lee, Yi-Ching and Snodgrass, Sam and Winston, Flaura K and Gonzalez, Avelino J},
+  author={Santiago Onta{\~n}\'{o}n and Lee, Yi-Ching and Snodgrass, Sam and Winston, Flaura K and Gonzalez, Avelino J},
+  BookTitle = {AAAI 2017 Spring Symposium on Learning from Observation of Humans},
   year={2017}
 }
 
@@ -64,4 +65,14 @@
   author={Raschka, Sebastian},
   year={2015},
   publisher={Packt Publishing Ltd}
+}
+
+@article{mcdonald2012using,
+  title={Using crash data to develop simulator scenarios for assessing novice driver performance},
+  author={McDonald, Catherine and Tanenbaum, Jason and Lee, Yi-Ching and Fisher, Donald and Mayhew, Daniel and Winston, Flaura},
+  journal={Transportation Research Record: Journal of the Transportation Research Board},
+  number={2321},
+  pages={73--78},
+  year={2012},
+  publisher={Transportation Research Board of the National Academies}
 }
