--- a/paper/paper-DrexelFormat.tex
+++ b/paper/paper-DrexelFormat.tex
@@ -115,7 +115,7 @@ This section covers basic concepts of deep learning. First Subsection \ref{subse
 \subsection{Basic Concepts}\label{subsec:basicDL}
 
 \subsubsection{Artificial Neuron}\label{subsubsec:AN}
-Artificial neurons were introduced by Warren McCullock and Walter Pitts \cite{raschka2015python}. Initial artificial neurons are described as binary output logic gate from inputs. If sum of weighted inputs is greater than threshold, the output is 1. Otherwise, the output is 0.
+The concept of artificial neurons or perseptrons was introduced by Warren McCullock and Walter Pitts \cite{raschka2015python}. Initial artificial neurons are described as binary output logic gate from inputs. If sum of weighted inputs is greater than threshold, the output is 1. Otherwise, the output is 0.
 
 \begin{figure}[t!]
     \centering
@@ -133,7 +133,7 @@ $$U(z)=
 	\end{cases}
 $$
 
-The function deciding output is called activation function. In this case, the step function $U(z)$ is activation function.
+The function deciding output $o$ is called activation function. In this case, the step function $U(z)$ is activation function.
 
 Figure \ref{fig:basic_AN} also can be described by following equation:
 $$ o = U(\vec{x}\cdot\vec{w}-\theta)$$
@@ -158,9 +158,9 @@ $$o = \phi(\vec{x}\cdot\vec{w}+b)$$
     \label{fig:detail_NN}
 \end{figure}
 
-Using single neuron has limitation because it can solve only few problems. For example, single neuron cannot solve xor problem. Instead of using single neuron, neural network has bundle of neurons. Figure \ref{fig:detail_NN} illustrates it with $n$ input and $m$ neurons. The input is $\vec{x} = \{x_1, ..., x_n\} \in \mathbb{R}^n$, weights for $i$th neuron are $\vec{w_i} = \{w_{i1}, ..., w_{in}\} \in \mathbb{R}^n$. The bias term for the $i$th neuron is $b_i$. The output $\vec{o}$ of the network is calculated as follows:
+Using single neuron has limitation because it can solve only few problems. For example, single neuron cannot solve xor problem. Instead of using single neuron, neural network has bundle of neurons. Figure \ref{fig:detail_NN} illustrates it with $n$ input and $m$ neurons. The input is $\vec{x} = \{x_1, ..., x_n\} \in \mathbb{R}^n$, weights for $i$th neuron are $\vec{w_i} = \{w_{i1}, ..., w_{in}\} \in \mathbb{R}^n$, and a bias term for the $i$th neuron is $b_i$. The output $\vec{o} = \{o_1, ..., o_m\} \in \mathbb{R}^m$ of the network is calculated as follows:
 $$\vec{o} = \bm{\phi}(\{(\vec{x}\cdot\vec{w_1}+b_1),(\vec{x}\cdot\vec{w_2}+b_2),...,(\vec{x}\cdot\vec{w_m}+b_m)\})$$
-Where activation function is applied on each element of its input and output is $m$ dimension vector $\vec{o} = \{o_1, ..., o_m\} \in \mathbb{R}^m$.
+Where activation function is applied on each element of its input.
 
 To simplify the equation, let a transform matrix $\bold{w}: \mathbb{R}^n \rightarrow \mathbb{R}^m$ be
 $\bold{w}=
@@ -172,7 +172,7 @@ and bias vector $\vec{b} = \{b_1, ..., b_m\} \in \mathbb{R}^m$.
 The equation is
 $$\vec{o} = \bm{\phi}((\vec{x}^T\bold{w})^T+\vec{b})$$
 
-The bias term can be skipped by changing input vector and weight transform matrix. Let $\vec{X} \in \mathbb{R}^{n+1}$ be $\{x_1, x_2, ..., x_n, 1\}$ which is added one more dimension from $\vec{x}$ with value 1 and $\vec{W_i} \in \mathbb{R}^{n+1}$ be $\{w_{i1}, ..., w_{in}, b_i\}$ which is added by bias term into weights and $\bold{W}: \mathbb{R}^{n+1} \rightarrow \mathbb{R}^m$ be
+The bias term can be skipped by extending input vector and weight transform matrix. Let $\vec{X} \in \mathbb{R}^{n+1}$ be $\{x_1, x_2, ..., x_n, 1\}$ which is added one more dimension from $\vec{x}$ with value 1 and $\vec{W_i} \in \mathbb{R}^{n+1}$ be $\{w_{i1}, ..., w_{in}, b_i\}$ which is added by bias term into weights and $\bold{W}: \mathbb{R}^{n+1} \rightarrow \mathbb{R}^m$ be
 $\bold{W}=
 \begin{bmatrix}
 	\vec{W_1} & \vec{W_2} & \cdots & \vec{W_m}
@@ -200,32 +200,36 @@ $$\vec{o} = \bm{\phi}(\vec{X}\bold{W})$$
 	For all figures under this point, $\Sigma$ node is skipped, square shape node represents input node, circle shape node represents compute node, edge with transform matrix represents weight matrix, edge without transform matrix represents identity matrix for weight matrix and arrow with small filled circle on end represents output vector. Figure \ref{fig:detail_NN}, Figure \ref{fig:withoutBiasNN}, and \ref{fig:NN} are equal.
 
 
-\subsubsection{Multilayer Neural Network}\label{subsubsec:MNN}
-Single layer neural network has input layer and output layer but multilayer neural network has several hidden layers between input layer and output layer. This part introduces to multilayer neural network by explaining neural network with one hidden layer. Let $\vec{x} \in \mathbb{R}^n$ be input, $\vec{h} \in \mathbb{R}^m$ be output from hidden layer, $\vec{c} \in \mathbb{R}^m$ be bias for hidden layer, $\vec{o} \in \mathbb{R}^l$ be output from output layer, $\vec{b} \in \mathbb{R}^l$ be bias for output layer, $\bold{u}: \mathbb{R}^n \rightarrow \mathbb{R}^m$ be transform matrix for hidden layer and $\bold{w}: \mathbb{R}^m \rightarrow \mathbb{R}^l$ be transform matrix for output layer. The activation function $\bold{h}$ is for hidden layer and the activation function $\bm{\phi}$ is for output layer. Figure \ref{fig:MNN} shows two layer neural network.
+\subsubsection{Multilayer Perceptron}\label{subsubsec:MLP}
+Single layer perceptron neural network has only input layer and output layer such as Figure \ref{fig:NN} but multilayer perceptron (MLP) has several hidden layers between input layer and output layer. This part introduces to MLP by explaining neural network with one hidden layer. Let $\vec{x} \in \mathbb{R}^n$ be input, $\vec{h} \in \mathbb{R}^m$ be output from hidden layer, $\vec{c} \in \mathbb{R}^m$ be bias for hidden layer, $\vec{o} \in \mathbb{R}^l$ be output from output layer, $\vec{b} \in \mathbb{R}^l$ be bias for output layer, $\bold{v}: \mathbb{R}^n \rightarrow \mathbb{R}^m$ be transform matrix for hidden layer and $\bold{w}: \mathbb{R}^m \rightarrow \mathbb{R}^l$ be transform matrix for output layer. The activation function $\bold{f}()$ is for hidden layer and the activation function $\bold{g}()$ is for output layer. Figure \ref{fig:MLP} shows one hidden layer MLP.
 
-To compute output of MNN, forward-propagation is used. forward-propagation is to pass input $\vec{x}$ to output through hidden layers \cite{murphy2012machine}. For example, the output from hidden layer on Figure \ref{fig:MNN} can be computed
+To compute output of MLP, forward-propagation is used. forward-propagation is to pass input $\vec{x}$ to output through hidden layers \cite{murphy2012machine}. For example, the output from hidden layer on Figure \ref{fig:MLP} can be computed
 $$\vec{h} = \bold{f}(\vec{x}\bold{v}+\vec{c}) = \bold{f}(\vec{X}\bold{V})$$
 Then output layer uses output from hidden layer as input. The output of the neural network can be computed
 $$\vec{o} = \bold{g}(\vec{h}\bold{w}+\vec{b}) = \bold{g}(\vec{H}\bold{W})$$
 Therefore, final equation for two layer neural network is
-$$\vec{o} = \bold{g}(\bold{h}(\vec{x}\bold{v}+\vec{c})\bold{w}+\vec{b})$$
+$$\vec{o} = \bold{g}(\bold{h}(\vec{x}\bold{v}+\vec{c})\bold{w}+\vec{b}) = \bold{g}(\bold{h}(\vec{X}\bold{V})\bold{W})$$
 
 \begin{figure}[t!]
     \centering
-    \includegraphics[width=0.5\textwidth]{pictures/figures/MNN.png}
-    \caption{Two Layer Neural Network}
-    \label{fig:MNN}
+    \includegraphics[width=0.5\textwidth]{pictures/figures/MLP.png}
+    \caption{One Hidden Layer MLP}
+    \label{fig:MLP}
 \end{figure}
 
 
 \subsubsection{Back-propagation}\label{subsubsec:BP}
-Training neural network means finding weights and biases. Similar as forward-propagation, back-propagation is used when MNN is trained. As forward-propagation passes input $\vec{x}$ to output, back-propagation passes error from output layer to hidden layer \cite{murphy2012machine}. Error function $E$ (some times called a loss function) usually uses sum square error as follow:
+Training neural network means finding weights and biases. Similar as forward-propagation, back-propagation is used when MLP is trained. As forward-propagation passes input $\vec{x}$ to output, back-propagation passes error from output layer to hidden layers \cite{murphy2012machine}. Error function $E()$ (some times called a loss function) usually uses sum square error as follow:
 $$E(\vec{y}, \vec{o}) = \frac{1}{2}\sum_{i}(y_i-o_i)^2$$
-Where $\vec{y}$ is expected output from MNN. It means that the goal of MNN is to find weights and biases that make $\vec{o}$ have same values of $\vec{y}$. Error function is a function of weights and biases. In general, the function of two layers of an MNN can be seen as a function of $\bold{V}$ and $\bold{W}$: {\color{red} [santi: I don't like that we don't have x and y in the function below, since you actually need those to calculate the error, so make sure we have everything we need]}
+where $\vec{y}$ is expected output from MLP.
 
-$$E(\bold{V}, \bold{W})$$
+Training neural network means finding weights and biases that make $\vec{o}$ close to $\vec{y}$. It means that training neural network needs a function of weights and biases. The train function $J()$ to train a neural network can be defined from error function $E()$. The error function $E()$ is a function of expected output and output from neural network with fixed weights and biases. Let weights and biases be changeable and input be fixed on the error function, then the output is depends on weights and biases and the train function $J()$ for one hidden MLP (Figure \ref{fig:MLP}) can define below:
+$$J(\bold{V}, \bold{W}) = \frac{1}{2}\sum_{i}(y_i-o_i)^2 = \frac{1}{2}\sum_{i}(y_i-g(\vec{H}\bold{W_i})^2 =\frac{1}{2}\sum_{i}(y_i-g(\bold{h}(\vec{X}\bold{V})\bold{W_i}))^2$$
+where $\bold{W_i}$ is $i$th column of $\bold{W}$
 
-To update weights, let $\vec{h'}=\vec{X}\bold{V}$ be input for hidden layer activation function $\bold{f}$ and $\vec{o'}=\vec{H}\bold{W}$ be input for output layer activation function $\bold{g}$. So $\vec{h}=\bold{f}(\vec{h'})=\bold{f}(\vec{X}\bold{V})$ and $\vec{o}=\bold{g}(\vec{o'})=\bold{g}(\vec{H}\bold{W})$. Let $V_{ij}$ be $i$th neuron weight in hidden layer for input $X_j$ and $W_{ij}$ be $i$th neuron weight in output layer for input $H_j$.
+The training function $J()$ for one hidden layer MLP is a function of $\bold{V}$ and $\bold{W}$ with fixed input. Again capital letter of transform matrix contains bias. So $\bold{V}$ is weights and biases for hidden layer and $\bold{W}$ is weights and biases for output layer.
+
+To train the neural network, weights and biases are regulated. To update weighs and biases, let $\vec{h'}=\vec{X}\bold{V}$ be input for hidden layer activation function $\bold{f}$ and $\vec{o'}=\vec{H}\bold{W}$ be input for output layer activation function $\bold{g}$. So $\vec{h}=\bold{f}(\vec{h'})=\bold{f}(\vec{X}\bold{V})$ and $\vec{o}=\bold{g}(\vec{o'})=\bold{g}(\vec{H}\bold{W})$. Let $V_{ij}$ be $i$th neuron weight in hidden layer for input $X_j$ and $W_{ij}$ be $i$th neuron weight in output layer for input $H_j$.
 
 \begin{figure}[t!]
     \centering
@@ -235,13 +239,13 @@ To update weights, let $\vec{h'}=\vec{X}\bold{V}$ be input for hidden layer acti
 \end{figure}
 
 Let's first update $W_{ij}$ and Figure \ref{fig:BP1} shows detail of output layer related with ${W_{ij}}$. The updated weight ${{W_{ij}}^{next}}$ can be calculated as follow:
-$${{W_{ij}}^{next}}=W_{ij} - \eta\frac{\partial E}{\partial W_{ij}}$$ where $\eta$ is learning rate. The equation tells to remove error, updated weight should be move opposite direction of gradient of error function. The method is called 'gradient descent'.
+$${{W_{ij}}^{next}}=W_{ij} - \eta\frac{\partial J}{\partial W_{ij}}$$ where $\eta$ is learning rate. The equation tells to remove error, updated weight should be move opposite direction of gradient of error function. The method is called 'gradient descent'.
 
-Let's compute $\frac{\partial E}{\partial W_{ij}}$
+Let's compute $\frac{\partial J}{\partial W_{ij}}$
 $$
-\frac{\partial E}{\partial W_{ij}}
-= \frac{\partial E}{\partial o_i}\frac{\partial o_i}{\partial W_{ij}}
-= \frac{\partial E}{\partial o_i}\frac{\partial o_i}{\partial o'_i}\frac{\partial o'_i}{\partial W_{ij}}
+\frac{\partial J}{\partial W_{ij}}
+= \frac{\partial J}{\partial o_i}\frac{\partial o_i}{\partial W_{ij}}
+= \frac{\partial J}{\partial o_i}\frac{\partial o_i}{\partial o'_i}\frac{\partial o'_i}{\partial W_{ij}}
 $$
 So the equation has three parts.
 
@@ -253,7 +257,7 @@ $$
 = H_j
 $$
 
-Assume all activation function is sigmoid function $sigm()$ then second part is
+Assume the activation function for output layer is sigmoid function $sigm()$ then second part is
 $$
 \frac{\partial o_i}{\partial o'_i}
 = \frac{\partial}{\partial o'_i}sigm(o'_i)
@@ -261,27 +265,27 @@ $$
 = o_i(1-o_i)
 $$
 
-Assume error function is sum square then the last part is
+Assume train function is sum square then the last part is
 $$
-\frac{\partial E}{\partial o_i}
+\frac{\partial J}{\partial o_i}
 = \frac{\partial}{\partial o_i}\frac{1}{2}\sum_k(y_k-o_k)^2
 = \frac{\partial}{\partial o_i}\frac{1}{2}(y_i-o_i)^2
-= (o_i-y_i)
+= -(y_i-o_i)
 $$
 
 Therefore,
 $$
 {{W_{ij}}^{next}}
-= W_{ij} - \eta\frac{\partial E}{\partial W_{ij}}
-= W_{ij} - \eta\frac{\partial E}{\partial o_i}\frac{\partial o_i}{\partial o'_i}\frac{\partial o'_i}{\partial W_{ij}}
-= W_{ij} - \eta(o_i-y_i)o_i(1-o_i)H_j
+= W_{ij} - \eta\frac{\partial J}{\partial W_{ij}}
+= W_{ij} - \eta\frac{\partial J}{\partial o_i}\frac{\partial o_i}{\partial o'_i}\frac{\partial o'_i}{\partial W_{ij}}
+= W_{ij} + \eta(y_i-o_i)o_i(1-o_i)H_j
 $$
 
 Before moving to update weights for hidden layer, define $\delta_i$ as follow:
 $$
 \delta_i
-= \frac{\partial E}{\partial o'_i}
-= \frac{\partial E}{\partial o_i}\frac{\partial o_i}{\partial o'_i}
+= \frac{\partial J}{\partial o'_i}
+= \frac{\partial J}{\partial o_i}\frac{\partial o_i}{\partial o'_i}
 $$
 
 The $\delta_i$ is useful because it is shared when back-propagation updates all weights related with $i$th neuron. Also the $\delta_i$ is used when back-propagation updates weights on hidden layers.
@@ -294,13 +298,13 @@ The $\delta_i$ is useful because it is shared when back-propagation updates all 
 \end{figure}
 
 The next step is to update weights in hidden layer. Let's update $V_{ij}$ and Figure \ref{fig:BP2} shows detail of neural network related with $V_{ij}$. The updated weight ${{V_{ij}}^{next}}$ can be calculated as follow:
-$${{V_{ij}}^{next}}=V_{ij} - \eta\frac{\partial E}{\partial V_{ij}}$$ where $\eta$ is learning rate. The equation is similar as ${{W_{ij}}^{next}}$
+$${{V_{ij}}^{next}}=V_{ij} - \eta\frac{\partial J}{\partial V_{ij}}$$ where $\eta$ is learning rate. The equation is similar as ${{W_{ij}}^{next}}$
 
-Let's compute $\frac{\partial E}{\partial V_{ij}}$
+Let's compute $\frac{\partial J}{\partial V_{ij}}$
 $$
-\frac{\partial E}{\partial V_{ij}}
-= \frac{\partial E}{\partial h'_i}\frac{\partial h'_i}{\partial V_{ij}}
-= \frac{\partial E}{\partial h_i}\frac{\partial h_i}{\partial h'_i}\frac{\partial h'_i}{\partial V_{ij}}
+\frac{\partial J}{\partial V_{ij}}
+= \frac{\partial J}{\partial h'_i}\frac{\partial h'_i}{\partial V_{ij}}
+= \frac{\partial J}{\partial h_i}\frac{\partial h_i}{\partial h'_i}\frac{\partial h'_i}{\partial V_{ij}}
 $$
 So the equation also has three parts.
 
@@ -322,20 +326,20 @@ $$
 
 Then the last part is
 $$
-\frac{\partial E}{\partial h_i}
-= \sum_k(\frac{\partial E}{\partial o'_k}\frac{\partial o'_k}{\partial h_i})
+\frac{\partial J}{\partial h_i}
+= \sum_k(\frac{\partial J}{\partial o'_k}\frac{\partial o'_k}{\partial h_i})
 = \sum_k(\delta_kw_{ki})
 $$
 
 Therefore,
 $$
 {{V_{ij}}^{next}}
-= V_{ij} - \eta\frac{\partial E}{\partial V_{ij}}
-= W_{ij} - \eta\frac{\partial E}{\partial h_i}\frac{\partial h_i}{\partial h'_i}\frac{\partial h'_i}{\partial V_{ij}}
+= V_{ij} - \eta\frac{\partial J}{\partial V_{ij}}
+= W_{ij} - \eta\frac{\partial J}{\partial h_i}\frac{\partial h_i}{\partial h'_i}\frac{\partial h'_i}{\partial V_{ij}}
 = W_{ij} - \eta\sum_k(\delta_kw_{ki})h_i(1-h_i)X_j
 $$
 
-Notice that as forward-propagation sends output of a layer as input of next layer, back-propagation sends error of a layer to previous layer. For example, the $\delta_i=\frac{\partial E}{\partial o'_i}$ is error on output layer then sends it to hidden layer. 
+Notice that as forward-propagation sends output of a layer as input of next layer, back-propagation sends error of a layer to previous layer. For example, the $\delta_i=\frac{\partial J}{\partial o'_i}$ is error on output layer then sends it to hidden layer. 
 
 
 
@@ -455,14 +459,14 @@ To describe AE, let $\vec{x} = \{x_1, ..., x_n\} \in \mathbb{R}^n$ be input, $\v
 
 The output of encoder is
 $$\vec{e} = \bold{f}(\vec{X}\bold{U})$$
-Where $\bold{f}$ is the activation function for encoder layer. It is usually sigmoid function.
+where $\bold{f}$ is the activation function for encoder layer. It is usually sigmoid function.
 
 The output of decoder is
 $$\vec{d} = \bold{g}(\vec{E}\bold{V})$$
-Where $\bold{g}$ is the activation function for decoder layer. It is usually sigmoid or linear function.
+where $\bold{g}$ is the activation function for decoder layer. It is usually sigmoid or linear function.
 
-The purpose of AE copies input as output. Therefore, cost or loss function is calculated by
-$$L(\vec{x}, \vec{d}) = L(\vec{x}, \bold{g}(\vec{E}\bold{V})) = L(\vec{x}, \bold{g}(\bold{f}(\vec{x}\bold{u}+\vec{b_e})\bold{v}+\vec{b_d}))$$
+The purpose of AE copies input as output. Therefore, the error function is calculated by
+$$E(\vec{x}, \vec{d}) = E(\vec{x}, \bold{g}(\vec{E}\bold{V})) = E(\vec{x}, \bold{g}(\bold{f}(\vec{x}\bold{u}+\vec{b_e})\bold{v}+\vec{b_d}))$$
 Where $\vec{b_e} = \{b_{e1}, ..., b_{em}\} \in \mathbb{R}^m$ is bias for encoder layer and $\vec{b_d} = \{b_{d1}, ..., b_{dm}\} \in \mathbb{R}^n$ is bias for decoder layer.
 
 AE seems not useful because it only tries to copy input. However, AE is usually used with other neural network and other neural network uses data from encoder layer of AE not from decoder layer. Making similar values of input and decoder output guarantees that result from encode layer contains all information of input. It means that AE can represent same information of input data in different dimension. When dimension of encoder is higher than dimension of input, it is called overcomplete Auto-encoder. When dimension of encoder is lower than dimension of input, it is called undercomplete Auto-encoder.
@@ -512,15 +516,15 @@ On this paper and experiment, undercomplete AE is used for reducing input dimens
     \label{fig:train_MAE3}
 \end{figure}
 
-	In this case, pretraining has three steps because it has three encoder and decoder layers. Figure \ref{fig:train_MAE1} shows train of first encoder and decoder layer. While first encoder and decoder layer are trained, rest encoder and decoder are ignored. So loss function is
-$$L(\vec{x}, \bold{g_1}(\bold{f_1}(\vec{X}\bold{E_1})\bold{D_1}))$$
-Figure \ref{fig:train_MAE2} shows train of second encoder and decoder layer. While second encoder and decoder layer are trained, transform matrix $\bold{e_1}$ and $\bold{d_1}$ are fixed because two transform matrix are already trained previous step. So loss function is
-$$L(\vec{x}, \bold{g_1}(\bold{g_2}(\bold{f_2}(\bold{f_1}(\vec{X}\bold{E_1^{fixed}})\bold{E_2})\bold{D_2})\bold{D_1^{fixed}}))$$
-The last step is Figure \ref{fig:train_MAE3} and it trains third encoder and decoder. During this, first and second encoder and decoder weights are fixed. So loss function is
-$$L(\vec{x}, \bold{g_1}(\bold{g_2}(\bold{g_3}(\bold{f_3}(\bold{f_2}(\bold{f_1}(\vec{X}\bold{E_1^{fixed}})\bold{E_2^{fixed}})\bold{E_3})\bold{D_3})\bold{D_2^{fixed}})\bold{D_1^{fixed}}))$$
+	In this case, pretraining has three steps because it has three encoder and decoder layers. Figure \ref{fig:train_MAE1} shows train of first encoder and decoder layer. While first encoder and decoder layer are trained, rest encoder and decoder are ignored. So error function is
+$$E(\vec{x}, \bold{g_1}(\bold{f_1}(\vec{X}\bold{E_1})\bold{D_1}))$$
+Figure \ref{fig:train_MAE2} shows train of second encoder and decoder layer. While second encoder and decoder layer are trained, transform matrix $\bold{e_1}$ and $\bold{d_1}$ are fixed because two transform matrix are already trained previous step. So error function is
+$$E(\vec{x}, \bold{g_1}(\bold{g_2}(\bold{f_2}(\bold{f_1}(\vec{X}\bold{E_1^{fixed}})\bold{E_2})\bold{D_2})\bold{D_1^{fixed}}))$$
+The last step is Figure \ref{fig:train_MAE3} and it trains third encoder and decoder. During this, first and second encoder and decoder weights are fixed. So error function is
+$$E(\vec{x}, \bold{g_1}(\bold{g_2}(\bold{g_3}(\bold{f_3}(\bold{f_2}(\bold{f_1}(\vec{X}\bold{E_1^{fixed}})\bold{E_2^{fixed}})\bold{E_3})\bold{D_3})\bold{D_2^{fixed}})\bold{D_1^{fixed}}))$$
 	
-	After finishing pretraining step, all weights are close enough to optimal weights for train algorithm to find optimize answer when it train whole neural network. So loss function training whole network is
-$$L(\vec{x}, \bold{g_1}(\bold{g_2}(\bold{g_3}(\bold{f_3}(\bold{f_2}(\bold{f_1}(\vec{X}\bold{E_1})\bold{E_2})\bold{E_3})\bold{D_3})\bold{D_2})\bold{D_1}))$$
+	After finishing pretraining step, all weights are close enough to optimal weights for train algorithm to find optimize answer when it train whole neural network. So error function training whole network is
+$$E(\vec{x}, \bold{g_1}(\bold{g_2}(\bold{g_3}(\bold{f_3}(\bold{f_2}(\bold{f_1}(\vec{X}\bold{E_1})\bold{E_2})\bold{E_3})\bold{D_3})\bold{D_2})\bold{D_1}))$$
 
 
 \section{Deep Learning Libraries}\label{sec:DLL}
@@ -542,64 +546,50 @@ Tensorflow \footnote{\url{https://www.tensorflow.org/}} is an open source softwa
 \chapter{Data Set}
 % ####################################################################################################################################
 
-Data was collected in the high-fidelity simulator \cite{lee2017learning} of the Center for Injury Research Prevention Studies at the \textit{Children'€™s Hospital of Philadelphia} (CHOP). The driving simulator provides an environment similar to real driving to test users. It has a 160 degree front view, rear-view, left side, and right side mirror images. It also features a full car chasis with active pedals, steering wheel, and a full dashboard with even audio equipment.
+Data was collected in the high-fidelity simulator \cite{lee2017learning} of the Center for Injury Research Prevention Studies at the \textit{Children's Hospital of Philadelphia} (CHOP). The driving simulator provides an environment similar to real driving to test users. It has a 160 degree front view, rear-view, left side, and right side mirror images. It also features a full car chassis with active pedals, steering wheel, and a full dashboard with even audio equipment.
 
 The experiments on this paper use 16 traces from 4 drivers: 2 people are expert drivers and 2 people are inexpert drivers. Each person drove four different tracks and each track represent different traffic situations and interactions with other vehicles. Each track has multiple instances of three scenarios that have been found to result in a high likelihood of crashing for 16-18 year- old teen drivers driving alone or with a peer passenger according to the NMVCCS (National Motor Vehicle Crash Causation Survey): 1) turning into opposite directions (turning left), 2) right roadside departure, and 3) rear-end events \cite{mcdonald2012using}. Thus, this results on a dataset that contains 8 traces of expert drivers, and 8 traces of inexpert drivers.
 
-The simulator records 100 features which include car status: velocity, steer, Brake, throttle and etc. and include environment status features such as the current speed limit, whether the driver is instructed to make the next left or right turn, etc. These data is collected at 60Hz. The traces vary in length from {\color{red} MINIMUM} to {\color{red} MAXIMUM}, with an average of {\color{red} AVERAGE} instances. The specific lengths of each trace are shown on Table \ref{tbl:traces}
+The simulator records 100 features which include car status: velocity, steer, Brake, throttle and etc. and include environment status features such as the current speed limit, whether the driver is instructed to make the next left or right turn, etc. These data is collected at 60Hz. The traces vary in length from 26298 to 51295, with an average of 33224.6875 instances. The specific lengths of each trace are shown on Table \ref{tbl:traces}
 
 In this paper, we used two versions of the collected data set. A first version ({\em raw dataset}) contains 98 of the 100 features collected by the driving simulator (the two features that are removed are time stamps). A second version ({\em filtered dataset}) contains only 23 features. These 23 features were manually selected as are those that are most important for the classification task at hand. Reducing size of features helps save time to train neural network.
 
 \begin{table}[!t]
+\centering
 \caption{Length of each of the traces used in our experiments.}
 \label{tbl:traces}
-\centering
-\begin{tabular}{|l|c|c|} \hline
-{\em Trace} 	& {\em Length} & 	{\em Label} \\ \hline
-Trace 1 		&	?		&	Expert \\
-Trace 2 		&	?		&	Expert \\
-Trace 3 		&	?		&	Expert \\
-Trace 4 		&	?		&	Expert \\
-Trace 5 		&	?		&	Expert \\
-Trace 6 		&	?		&	Expert \\
-Trace 7 		&	?		&	Expert \\
-Trace 8 		&	?		&	Expert \\
-Trace 9 		&	?		&	Inexpert \\
-Trace 10 		&	?		&	Inexpert \\
-Trace 11 		&	?		&	Inexpert \\
-Trace 12 		&	?		&	Inexpert \\
-Trace 13 		&	?		&	Inexpert \\
-Trace 14 		&	?		&	Inexpert \\
-Trace 15 		&	?		&	Inexpert \\
-Trace 16 		&	?		&	Inexpert \\ \hline
+\begin{tabular}{|l|l|l|l|}
+\hline
+{\em Trace}   & {\em Driver}    & {\em Track}  & {\em Length} \\ \hline
+Trace0  & Expert0   & Track0 & 50029  \\
+Trace1  & Expert0   & Track1 & 26375  \\
+Trace2  & Expert0   & Track2 & 29629  \\
+Trace3  & Expert0   & Track3 & 26298  \\
+Trace4  & Expert1   & Track0 & 51295  \\
+Trace5  & Expert1   & Track1 & 26674  \\
+Trace6  & Expert1   & Track2 & 29680  \\
+Trace7  & Expert1   & Track3 & 27075  \\
+Trace8  & Inexpert0 & Track0 & 49691  \\
+Trace9  & Inexpert0 & Track1 & 30058  \\
+Trace10 & Inexpert0 & Track2 & 26441  \\
+Trace11 & Inexpert0 & Track3 & 27373  \\
+Trace12 & Inexpert1 & Track0 & 47658  \\
+Trace13 & Inexpert1 & Track1 & 29380  \\
+Trace14 & Inexpert1 & Track2 & 26684  \\
+Trace15 & Inexpert1 & Track3 & 27255  \\ \hline
 \end{tabular}
 \end{table}
-
-
-
-
-%\begin{table}[t!]
-%\centering
-%\caption{Data Information}
-%\label{data_pair}
-%\begin{tabular}{|l|llllllllllllllll|}
-%\hline
-%       & Data0   & Data1   & Data2   & Data3   & Data4   & Data5   & Data6   & Data7   & Data8     & Data9     & Data10    & Data11    & Data12    & Data13    & Data14    & Data15    \\ \hline
-%Driver & Expert0 & Expert0 & Expert0 & Expert0 & Expert1 & Expert1 & Expert1 & Expert1 & Inexpert0 & Inexpert0 & Inexpert0 & Inexpert0 & Inexpert1 & Inexpert1 & Inexpert1 & Inexpert1 \\
-%Track  & Track0  & Track1  & Track2  & Track3  & Track0  & Track1  & Track2  & Track3  & Track0    & Track1    & Track2    & Track3    & Track0    & Track1    & Track2    & Track3    \\ \hline
-%\end{tabular}
-%\end{table}
 
 
 % ####################################################################################################################################
 \chapter{Technical Approach}
 % ####################################################################################################################################
 
-This chapter covers technical methods for experiment on the paper also introduces to three different neural network used for the experiment.
+This chapter covers technical methods for experiments on the paper also introduces to three different neural network used for the experiments.
 
 
 \section{Cross Validation}
-Cross validation (CV) is used to validate model when data is not enough. CV divides data set to $K$ folds then applies $k$th fold as test set and other folds as train set to target model. For example, experiment on the paper uses only 16 data set but it is not enough to train neural network. To validate neural network model whether the neural network works well or not, 16 data set is divided to 4 folds. Each folds contain two expert driver simulation data and two inexpert driver simulation data. The neural network is trained four times with different train (3 folds) and test (1 fold) set. Figure \ref{fig:CV} shows four folds cross validation which is used on the paper.
+Cross validation (CV) is used to validate model when data is not enough \cite{Goodfellow-et-al-2016}. CV divides data set to $K$ folds then applies $i$th fold as test set and other folds as train set to target model. Experiments on the paper use 16 traces but it is not enough to train neural network. CV can be used to validate neural network model and compare performance of three different models. The 16 traces dataset is divided to 4 folds. Each folds contain two traces from expert and two traces from inexpert. The neural networks are trained four times with different train (3 folds) and test (1 fold) set. Figure \ref{fig:CV} shows four folds cross validation. Red color is the fold for testing and other folds are for training. 
 
 \begin{figure}[t!]
     \centering
@@ -610,9 +600,9 @@ Cross validation (CV) is used to validate model when data is not enough. CV divi
 
 
 \section{LSTM}
-The LSTM neural network is used on experiment data set to classify expert or inexpert driver because the data has time domain and RNN, specially LSTM, neural network gives good performance for serial data. On the paper, LSTM neural network is built with 16, 32, 64, 128, and 256 hidden neurons. The output from LSTM is sent to output layer which has two neurons. By using softmax, output from two neurons is classified. If it has [0, 1], it is classified to expert. Otherwise, it is classified to inexpert.
+The LSTM neural network is used on three different neural network models to classify expert or inexpert driver because the data has time domain and LSTM gives good performance for serial data. On the paper, LSTM neural network is built with 16, 32, 64, 128, and 256 number of hidden neurons. The output from LSTM is sent to output layer which has two neurons. By using softmax, output from two neurons is classified. If it has [0, 1], it is classified to expert. Otherwise, it is classified to inexpert.
 
-Figure \ref{fig:exp_NN1} shows first neural network for experiment on the paper. Its input diver simulation data has 23 features which is meaningful dimensions chosen from original data with 100 features. The filtered input is feed to LSTM neural network then the result is passed to output layer.
+Figure \ref{fig:exp_NN1} shows first neural network model ({\em first model}) on the paper. Its input is {\em filtered dataset} which has 23 chosen features. The {\em filtered dataset} is feed directly to LSTM then the result is passed to output layer.
 
 \begin{figure}[t!]
     \centering
@@ -622,8 +612,11 @@ Figure \ref{fig:exp_NN1} shows first neural network for experiment on the paper.
 \end{figure}
 
 
-\section{Single layer Auto-encoder}
-The original data has 100 features and it is too many features. Single layer AE (SAE) can be used to reduce dimensions. On the second experiment, second neural network has SAE to reduce 100 features to 25 features. Figure \ref{fig:exp_NN2} shows abstract neural network for second experiment. Notice that the figure only has encoder because after train encoder and decoder in SAE, only encoder is used to reduce dimensions. The output from encoder is passed to LSTM.
+\section{Auto-encoder}
+The {\em raw dataset} has 98 features and it takes too much time to train nerual network if all 98 features are used. AE can solve the problem by reducing dimensions. 
+
+\subsection{Single layer Auto-encoder}
+Figure \ref{fig:exp_NN2} shows second neural network model ({\em second model}) on the paper. The {\em second model} is added by one AE layer from {\em first model}. The purpose of the AE layer is to reduce 98 features to 25 features on {\em raw dataset}. Notice that the figure only has encoder because after training AE, only encoder is used to reduce dimensions. The output from encoder is passed to LSTM.
 
 \begin{figure}[t!]
     \centering
@@ -633,8 +626,8 @@ The original data has 100 features and it is too many features. Single layer AE 
 \end{figure}
 
 
-\section{Multiple layer Auto-encoder}
-To compare performance of SAE, the third experiment neural network has MAE. It has three layer AE. First AE reduces 100 dimensions to 75 dimensions, second AE reduces 75 dimensions to 50 dimensions and the last AE reduces 50 dimensions to 25 dimensions. Figure \ref{fig:exp_NN3} describes it with three encoder layers.
+\subsection{Multiple layer Auto-encoder}
+Figure \ref{fig:exp_NN3} shows third neural network model ({\em third model}) on the paper. To compare performance between single layer AE and multiple layer AE, the {\em third model} has three layers of AE.  First AE reduces 98 dimensions to 75 dimensions, second AE reduces 75 dimensions to 50 dimensions and the last AE reduces 50 dimensions to 25 dimensions. The figure describes it with three encoder layers.
 
 \begin{figure}[t!]
     \centering
@@ -644,8 +637,9 @@ To compare performance of SAE, the third experiment neural network has MAE. It h
 \end{figure}
 
 
-\section{Sampling}
-The simulator records 60 samples per second. It is too often recorded. The original data is resampled by three different period: 1 over 10, 1 over 20, and 1 over 50. When it is resample, three methods are used. First method choose last sample of period, second method computes mean of data in period, and third method applies Gaussian windows. For third method, window size is 11, 21, and 51 for each period.
+\section{Sampling and Standardization}
+The simulator records 60 samples per second. It is too often recorded. The dataset is re-sampled by three different periods: 1 over 10, 1 over 20, and 1 over 50. When it is re-sampled, three methods are used. First method chooses last sample of period, second method computes mean of data in period, and third method applies Gaussian filter. For third method, window size is 11, 21, and 51 for each period.
+
 
 
 % ####################################################################################################################################
