--- a/paper/paper-DrexelFormat.tex
+++ b/paper/paper-DrexelFormat.tex
@@ -339,7 +339,7 @@ $$
 = W_{ij} - \eta\sum_k(\delta_kw_{ki})h_i(1-h_i)X_j
 $$
 
-Notice that as forward-propagation sends output of a layer as input of next layer, back-propagation sends error of a layer to previous layer. For example, the $\delta_i=\frac{\partial J}{\partial o'_i}$ is error on output layer then sends it to hidden layer. 
+Notice that as forward-propagation sends output of a layer as input of the next layer, back-propagation sends the error of a the layer to the previous layer. For example, if the $\delta_i=\frac{\partial J}{\partial o'_i}$ is an error on the output layer, then it is sent to hidden layers. 
 
 
 
